--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@gsap/react": "^2.1.0",
     "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.102.6",
     "@react-three/fiber": "^8.16.0",
+    "framer-motion": "^11.0.25",
+    "framer-motion-3d": "^11.0.25",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
